--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
                 </div>
 
                 <p>O objetivo principal é apresentar nossa marca para o cliente conhecer o melhor café do Brasil.</p>
-                <a href="#" target="blank" class="btn">Ver Site</a>
+                <a href="https://luizsilvaa.github.io/Shop-Coffee/" target="blank" class="btn">Ver Site</a>
 
             </div>
 
@@ -344,7 +344,7 @@
                 </div>
 
                 <p>Nossa missão é trazer saude de qualidade sem complicação de qualquer lugar do Brasil.</p>
-                <a href="#" target="blank" class="btn">Ver Site</a>
+                <a href="https://luizsilvaa.github.io/MedCare/" target="blank" class="btn">Ver Site</a>
             </div>
 
         </div>
@@ -369,7 +369,7 @@
                 </div>
 
                 <p>Este website foi criado para atender os Brasileiros de maneira mais acessível.</p>
-                <a href="#" target="blank" class="btn">Ver Site</a>
+                <a href="https://clone-netflix-beige-one.vercel.app/" target="blank" class="btn">Ver Site</a>
 
             </div>
 
